adding my cv to portfolio website and small changes

--- a/indexjd.html
+++ b/indexjd.html
@@ -97,15 +97,16 @@
           applications that exceed user expectations. Strong problem-solving and
           collaboration abilities.
         </p>
-        <button
-          href="#"
-          type="CV website"
-          value="Go to my CV"
-          id="submit-btn"
-          class="submit-btn"
+        <a href="./assests-cv/index.html"
+          ><button
+            type="CV website"
+            value="Go to my CV"
+            id="submit-btn"
+            class="submit-btn"
+          >
+            Go to my CV
+          </button></a
         >
-          Go to my CV
-        </button>
       </div>
     </section>
 
@@ -182,7 +183,7 @@
       <div class="projects-container">
         <div class="project-container project-card">
           <img
-            src="./images/icons8-dice-80.png"
+            src="./images/dicered.jpeg"
             alt="dice generator"
             loading="lazy"
             class="project-pic"
@@ -197,7 +198,7 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/netflixClone.png"
+            src="./images/game shop.png"
             alt="gameshop"
             loading="lazy"
             class="project-pic"
@@ -212,8 +213,8 @@
         </div>
         <div class="project-container project-card">
           <img
-            src="assets/images/greenyEarth.png"
-            alt="greeny-earth"
+            src="./images/Logo 2.png"
+            alt="bvmedical"
             loading="lazy"
             class="project-pic"
           />
