changes in cv assest dir

--- a/assests-cv/index.html
+++ b/assests-cv/index.html
@@ -70,38 +70,6 @@
           </div>
         </nav>
 
-        <!--section skills-->
-        <div>
-          <h2 class="h2skills">SKILLS</h2>
-        </div>
-
-        <div class="skillbox">
-          <div>
-            <div>
-              <p>web desing:</p>
-              <progress value="90" max="100">70 %</progress>
-            </div>
-
-            <br />
-
-            <div>
-              <p>full stack developement:</p>
-              <progress value="80" max="100">70 %</progress>
-            </div>
-
-            <br />
-            <div>
-              <p>photography:</p>
-              <progress value="60" max="100">70 %</progress>
-            </div>
-
-            <div>
-              <p>Git/Git-hub:</p>
-              <progress value="95" max="100">70 %</progress>
-            </div>
-          </div>
-        </div>
-
         <!--section softwares-->
         <div>
           <h2 class="h2softwares">SOFTWARES</h2>
@@ -111,33 +79,34 @@
           <div>
             <div>
               <p>Vscode:</p>
-              <progress value="85" max="100">70 %</progress>
+              <progress class="progresbars" value="85" max="100">70 %</progress>
             </div>
 
             <br />
 
             <div>
               <p>GIT:</p>
-              <progress value="95" max="100">70 %</progress>
+              <progress class="progresbars" value="95" max="100">70 %</progress>
             </div>
 
             <br />
             <div>
               <p>Figma:</p>
-              <progress value="75" max="100">70 %</progress>
+              <progress class="progresbars" value="75" max="100">70 %</progress>
             </div>
 
             <br />
 
             <div>
               <p>android studio:</p>
-              <progress value="50" max="100">70 %</progress>
+              <progress class="progresbars" value="50" max="100">70 %</progress>
             </div>
           </div>
         </div>
       </section>
+
       <!--section name and profile-->
-      <section class="sectionbox">
+      <section class="sectionprofile">
         <article class="articlesection">
           <div class="h2profile"><h2>Profile</h2></div>
           <p>
@@ -160,7 +129,7 @@
           </div>
           <!--education section -->
 
-          <div class="h2profile"><h2>education</h2></div>
+          <div class="h2profile"><h2>Education</h2></div>
           <div>
             <ul>
               <li>
@@ -203,42 +172,66 @@
               </li>
             </ul>
           </div>
+
+          <!--section skills-->
+          <div>
+            <h2 class="h2profile">Technical Skills</h2>
+          </div>
+
+          <div class="flex-container">
+            <ul class="column">
+              <li class="skill">HTMl</li>
+              <li class="skill">Cascading Style Sheets (CSS)</li>
+              <li class="skill">Amazon Web Services (AWS)</li>
+            </ul>
+            <ul class="column">
+              <li class="skill">Software Development</li>
+              <li class="skill">C++</li>
+              <li class="skill">Linux</li>
+            </ul>
+            <ul class="column">
+              <li class="skill">AngularJS</li>
+              <li class="skill">Java</li>
+              <li class="skill">JavaScript</li>
+            </ul>
+          </div>
+
+          <!--secion Hobbies-->
+          <h2 class="h2hobbies">Hobbies</h2>
+          <div class="hobbiesbox">
+            <div>
+              <img
+                src="./img/icons8-boxing-64.png"
+                alt="boxing"
+                class="hobbieimg"
+              />
+            </div>
+
+            <div>
+              <img
+                src="./img/icons8-camera-50.png"
+                alt="camera"
+                class="hobbieimg"
+              />
+            </div>
+
+            <div>
+              <img
+                src="./img/icons8-kitesurfing-50.png"
+                alt="kitesurf"
+                class="hobbieimg"
+              />
+            </div>
+
+            <div>
+              <img
+                src="./img/icons8-code-64.png"
+                alt="coding"
+                class="hobbieimg"
+              />
+            </div>
+          </div>
         </article>
-        <!--secion Hobbies-->
-        <h2 class="h2hobbies">Hobbies</h2>
-        <div class="hobbiesbox">
-          <div>
-            <img
-              src="./img/icons8-boxing-64.png"
-              alt="boxing"
-              class="hobbieimg"
-            />
-          </div>
-
-          <div>
-            <img
-              src="./img/icons8-camera-50.png"
-              alt="camera"
-              class="hobbieimg"
-            />
-          </div>
-
-          <div>
-            <img
-              src="./img/icons8-kitesurfing-50.png"
-              alt="kitesurf"
-              class="hobbieimg"
-            />
-          </div>
-
-          <div>
-            <img
-              src="./img/icons8-code-64.png"
-              alt="coding"
-              class="hobbieimg"
-            />
-          </div>
-        </div>
       </section>
     </main>
     <div id="footer">
