mejoras al cv media query

--- a/assests-cv/index.html
+++ b/assests-cv/index.html
@@ -110,49 +110,57 @@
         <article class="articlesection">
           <div class="h2profile"><h2>Profile</h2></div>
           <p>
-            Highly skilled and versatile Software Developer with extensive
-            experience in designing, developing, and optimizing software
-            solutions. Proficient in multiple programming languages, frameworks,
-            and databases. Committed to delivering innovative and efficient
-            applications that exceed user expectations. Strong problem-solving
-            and collaboration abilities.
+            Tech enthusiast with a unique blend of experience in the healthcare
+            sector and a strong passion for web development. Completing the
+            final phase of an intensive software engineering boot camp boot
+            camp, I've acquired a robust programming and application development
+            skill set. My medical background gives me a distinctive perspective
+            that fosters rapid learning, problem-solving, adaptability, and
+            passion for acquiring new skills.
           </p>
 
-          <div>
-            <p>
-              As a Software Developer, my goal is to create cutting-edge
-              software solutions that enhance user experiences and drive
-              business success. I am dedicated to embracing challenges and
-              leveraging my skills to make a significant impact on projects and
-              team collaborations.
-            </p>
-          </div>
           <!--education section -->
 
-          <div class="h2profile"><h2>Education</h2></div>
+          <div class="h2profile">
+            <img
+              src="./img/mortarboard.png"
+              alt="graduateimg"
+              id="iconsarticle"
+            />
+            <h2>Education</h2>
+          </div>
           <div>
             <ul>
               <li>
-                Bachelor of Science in Computer Science, XYZ University, [Year
-                of Graduation: 20XX]
+                Software Engineer Bootcamp, <br /><br />[AUT Auckland New
+                Zealand],<br />
+                [Year of Completion: 2024]
               </li>
+              <br />
               <li>
-                Online Courses in Advanced Web Development, [Online Learning
-                Platform], [Year of Completion: 20XX]
+                Online Course CS50: Introduction to Computer Science
+                <br /><br />[Harvard University], <br />[Year of Completion:
+                2023]
               </li>
+              <br />
 
+              <br />
               <li>
-                Full-Stack Web Development Bootcamp, [Bootcamp Provider], [Year
-                of Completion: 20XX]
-              </li>
-              <li>
-                Data Structures and Algorithms Specialization, [Online Learning
-                Platform], [Year of Completion: 20XX]
+                Bachelor degree in medicine. <br /><br />[“USC” Universidad
+                Santiago de Cali Colombia.] <br />
+                [Year of Completion: 2017]
               </li>
             </ul>
           </div>
           <!--work experience section-->
-          <div class="h2profile"><h2>Work Experience</h2></div>
+          <div class="h2profile">
+            <img
+              src="./img/working-with-laptop.png"
+              alt="dessking"
+              id="iconsarticle"
+            />
+            <h2>Work Experience</h2>
+          </div>
           <div>
             <ul>
               <h3>
@@ -174,25 +182,26 @@
           </div>
 
           <!--section skills-->
-          <div>
-            <h2 class="h2profile">Technical Skills</h2>
+          <div class="h2profile">
+            <img src="./img/skill.png" alt="skillsicon" id="iconsarticle" />
+            <h2>Technical Skills</h2>
           </div>
 
           <div class="flex-container">
             <ul class="column">
               <li class="skill">HTMl</li>
               <li class="skill">Cascading Style Sheets (CSS)</li>
-              <li class="skill">Amazon Web Services (AWS)</li>
-            </ul>
-            <ul class="column">
-              <li class="skill">Software Development</li>
-              <li class="skill">C++</li>
-              <li class="skill">Linux</li>
-            </ul>
-            <ul class="column">
-              <li class="skill">AngularJS</li>
-              <li class="skill">Java</li>
               <li class="skill">JavaScript</li>
+            </ul>
+            <ul class="column">
+              <li class="skill">React</li>
+              <li class="skill">bootstrap</li>
+              <li class="skill">Figma</li>
+            </ul>
+            <ul class="column">
+              <li class="skill">Git/Git hub</li>
+              <li class="skill">MySQL</li>
+              <li class="skill">MongoDB</li>
             </ul>
           </div>
 
@@ -234,7 +243,7 @@
         </article>
       </section>
     </main>
-    <div id="footer">
+    <div class="footer">
       <footer>&copy; J.David verdugo - 2023</footer>
     </div>
   </body>
