adding-more-cv-icons

--- a/assests-cv/index.html
+++ b/assests-cv/index.html
@@ -6,7 +6,7 @@
     <title>David CV Software Engineer</title>
     <link rel="stylesheet" href="./style.css" />
     <style>
-      @import url("https://fonts.googleapis.com/css2?family=Arimo&family=Chakra+Petch&family=Roboto+Condensed&display=swap");
+      @import url("https://fonts.googleapis.com/css2?family=Arimo&family=Chakra+Petch&family=Lato&family=Roboto+Condensed&display=swap");
     </style>
     <link rel="icon" href="./img/favicon.png" type="image/x-icon" />
   </head>
@@ -129,26 +129,22 @@
             />
             <h2>Education</h2>
           </div>
-          <div>
+          <div class="educationbox">
             <ul>
               <li>
-                Software Engineer Bootcamp, <br /><br />[AUT Auckland New
-                Zealand],<br />
-                [Year of Completion: 2024]
+                <h3>Software Engineer Bootcamp,</h3>
+                <p>AUT Auckland New Zealand,<br />Year of Completion: 2024</p>
               </li>
               <br />
               <li>
-                Online Course CS50: Introduction to Computer Science
-                <br /><br />[Harvard University], <br />[Year of Completion:
-                2023]
+                <h3>Online Course CS50: Introduction to Computer Science</h3>
+                <p>Harvard University, <br />Year of Completion: 2023</p>
               </li>
               <br />
-
-              <br />
               <li>
-                Bachelor degree in medicine. <br /><br />[“USC” Universidad
-                Santiago de Cali Colombia.] <br />
-                [Year of Completion: 2017]
+                <h3>Bachelor degree in medicine.</h3>
+                <p>“USC” Universidad Santiago de Cali Colombia. <br />
+                Year of Completion: 2017</p>
               </li>
             </ul>
           </div>
@@ -161,23 +157,23 @@
             />
             <h2>Work Experience</h2>
           </div>
-          <div>
+          <div class="educationbox">
             <ul>
-              <h3>
-                Retinal Photographer/ Grader (November 2021 - present)
-                Comprehensive care (Auckland)
-              </h3>
-
-              <li>
-                Vision examination and retinal photography. Classification and
-                detection of diabetic retinopathy and other related eye disease.
-              </li>
-              <li>
-                Meets and greets patients and treats them with empathy and
-                reassurance. Grade photographs and enter information into the
-                system Providing education to patients who have difficulty
-                controlling blood sugar levels. Visual acuity test.
-              </li>
+              <h3>Retinal Photographer/ Grader</h3>
+              <p>
+                (November 2021 - present)
+                <br />Comprehensive care (Auckland New Zealand)
+              </p>
+              <h3>Booking host</h3>
+              <p>
+                (November 2020 - 2021)
+                <br />THL (Auckland/Queenstown)
+              </p>
+              <h3>General phisicyan</h3>
+              <p>
+                (November 2021 - present)
+                <br />THL (Auckland/Queenstown)
+              </p>
             </ul>
           </div>
 
@@ -206,7 +202,7 @@
           </div>
 
           <!--secion Hobbies-->
-          <h2 class="h2hobbies">Hobbies</h2>
+          <div class="h2profile"><img src="./img/plant-a-tree.png" alt="hobbies" id="iconsarticle"><h2 class="h2hobbies">Hobbies</h2></article></div>
           <div class="hobbiesbox">
             <div>
               <img
