--- a/assests-cv/index.html
+++ b/assests-cv/index.html
@@ -143,8 +143,10 @@
               <br />
               <li>
                 <h3>Bachelor degree in medicine.</h3>
-                <p>“USC” Universidad Santiago de Cali Colombia. <br />
-                Year of Completion: 2017</p>
+                <p>
+                  “USC” Universidad Santiago de Cali Colombia. <br />
+                  Year of Completion: 2017
+                </p>
               </li>
             </ul>
           </div>
@@ -169,7 +171,7 @@
                 (November 2020 - 2021)
                 <br />THL (Auckland/Queenstown)
               </p>
-              <h3>General phisicyan</h3>
+              <h3>General physician</h3>
               <p>
                 (November 2021 - present)
                 <br />THL (Auckland/Queenstown)
@@ -202,7 +204,10 @@
           </div>
 
           <!--secion Hobbies-->
-          <div class="h2profile"><img src="./img/plant-a-tree.png" alt="hobbies" id="iconsarticle"><h2 class="h2hobbies">Hobbies</h2></article></div>
+          <div class="h2profile">
+            <img src="./img/plant-a-tree.png" alt="hobbies" id="iconsarticle" />
+            <h2 class="h2hobbies">Hobbies</h2>
+          </div>
           <div class="hobbiesbox">
             <div>
               <img
