img size, social icons moved,

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <!-- about  Section -->
     <section class="hero" id="about">
       <img
-        src="./images/Jd squareimg.jpg"
+        src="./images/Jd squareimg-2.jpg"
         alt="JDV"
         loading="lazy"
         id="topimg"
